--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
 @tailwind utilities;
+@import "tailwindcss";
+@import "tailwindcss/preflight";
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -10,18 +10,17 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --bg: rgb(126, 0, 151);
+    --endbg: #B200ED;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --white: rgb(255,255,255);
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+
+a{
+  text-decoration: none;
 }
